--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>como map workshop</title>
+</head>
+<body>
+    <h1>this is the map section</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, labore.</p>
+    
+</body>
+</html>
