--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </style>
   </head>
   <body>
+      <h1>this is my map section</h1>
     <div id='map'></div>
     <script>
     // The value for 'accessToken' begins with 'pk...'
@@ -27,7 +28,7 @@
     const map = new mapboxgl.Map({
       container: 'map',
       // Replace YOUR_STYLE_URL with your style URL.
-      style: 'YOUR_STYLE_URL', 
+      style: 'mapbox://styles/annamei1913/cl46t9w3m000015podlktojbs', 
       center: [-87.661557, 41.893748],
       zoom: 10.7
     });
