--- a/index.html
+++ b/index.html
@@ -1,40 +1,69 @@
 <!DOCTYPE html>
 <html lang='en'>
-  <head>
+
+<head>
     <meta charset='utf-8' />
     <title>Points on a map</title>
     <meta name='viewport' content='width=device-width, initial-scale=1' />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css' rel='stylesheet' />
     <style>
-      body { 
-        margin: 0; 
-        padding: 0; 
-      }
-      #map { 
-        position: absolute; 
-        top: 0; 
-        bottom: 0; 
-        width: 100%; 
-      }
+        body {
+            margin: 0;
+            padding: 0;
+        }
+
+        #map {
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            width: 100%;
+        }
     </style>
-  </head>
-  <body>
-      <h1>this is my map section</h1>
+</head>
+
+
+<body>
+    <h1>this is my map section</h1>
     <div id='map'></div>
     <script>
-    // The value for 'accessToken' begins with 'pk...'
-    mapboxgl.accessToken = 'pk.eyJ1IjoiYW5uYW1laTE5MTMiLCJhIjoiY2wxbmh5dDJmMDFrZTNjbzhzZGloYjdsaCJ9.2d3SFzdAFD2O4tuUgAZ-pg'; 
-    const map = new mapboxgl.Map({
-      container: 'map',
-      // Replace YOUR_STYLE_URL with your style URL.
-      style: 'mapbox://styles/annamei1913/cl46t9w3m000015podlktojbs', 
-      center: [-87.661557, 41.893748],
-      zoom: 10.7
-    });
+        // The value for 'accessToken' begins with 'pk...'
+        mapboxgl.accessToken = 'pk.eyJ1IjoiYW5uYW1laTE5MTMiLCJhIjoiY2wxbmh5dDJmMDFrZTNjbzhzZGloYjdsaCJ9.2d3SFzdAFD2O4tuUgAZ-pg';
+        const map = new mapboxgl.Map({
+            container: 'map',
+            // Replace YOUR_STYLE_URL with your style URL.
+            style: 'mapbox://styles/annamei1913/cl46t9w3m000015podlktojbs',
+            center: [-87.661557, 41.893748],
+            zoom: 10.7
+        });
 
-    // Code from the next step will go here.
+        /* Add an event listener that runs when a user clicks on the map element. */
+
+        map.on('click', (event) => {
+            // If the user clicked on one of your markers, get its information.
+            const features = map.queryRenderedFeatures(event.point, {
+                layers: ['chicago-parks'] // replace with your layer name
+            });
+            if (!features.length) {
+                return;
+            }
+            const feature = features[0];
+
+            /* Create a popup, specify its options and properties, and add it to the map.*/
+
+            const popup = new mapboxgl.Popup({ offset: [0, -15] })
+                .setLngLat(feature.geometry.coordinates)
+                .setHTML(
+                    `<h3>${feature.properties.title}</h3>
+                    <p>${feature.properties.description}</p>`
+                )
+                .addTo(map);
+
+        });
+
+
 
     </script>
-  </body>
+</body>
+
 </html>
